Wed Jul  7 13:08:40 CEST 1999  Werner Koch  <wk@isil.d.shuttle.de>


	* Makefile.am: Support for libtool.
	* configure.in: Ditto.

Tue Jun 29 21:44:25 CEST 1999  Werner Koch  <wk@isil.d.shuttle.de>


	* configure.in (use_local_zlib): The lost dollar is back.

	* acinclude.m4 (GNUPG_SYS_SYMBOL_UNDERSCORE): Add EMX case.
	* configure.in: Another variant of the MX vendor string

	* configure.in (--with-capabilities): Some test code (Remi).

Sat Jun 26 12:15:59 CEST 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* acinclude.m4 (GNUPG_CHECK_RDYNAMIC): Support for HPUX and IRIX.
	* configure.in (HAVE_DL_SHL_LOAD): New for HPUX (Dave Dykstra).

	* VERSION: Now 0.9.8

Wed Jun 16 20:16:21 CEST 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* configure.in: Add test for docbook-to-man

Tue Jun 15 12:21:08 CEST 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* acinclude.m4 (GNUPG_SYS_NM_PARSE): Support for {net,free}bsd,

Thu Jun 10 14:18:23 CEST 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* configure.in (ZLIB,GDBM): Check both, header and lib.

Sat Jun  5 15:30:33 CEST 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* pkclist.c (key_present_in_pk_list): New (Michael).

Tue May 25 19:50:32 CEST 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* configure.in (IS_DEVELOPMENT_VERSION): Fixed detection.

Sun May 23 14:20:22 CEST 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* acinclude.m4 (GNUPG_SYS_SYMBOL_UNDERSCORE): assume yes when
	cross-compiling.

Mon May 17 21:54:43 CEST 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* configure.in (socket): Fix for Unisys by Katsuhiro Kondou.

Sat May  8 19:28:08 CEST 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* NEWS: Add a marker line which I forgot to do for 0.9.6.

Thu May  6 14:18:17 CEST 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* README: Minor updates

	* VERSION: Now 0.9.6

Thu Apr  8 09:35:53 CEST 1999  Werner Koch  <wk@isil.d.shuttle.de>

	* acinclude.m4 (GNUPG_CHECK_RDYNAMIC): Fix for
					       amiga-openbsd (Peter Reich)
	(GNUPG_PROG_NM): Ditto
